--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -3,6 +3,6 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
+  padding-top: 10vh; /* Account for nav height */
+  min-height: 90vh;
 }
