--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,11 @@
 
 html,
 body {
-  min-height: 100vh;
   max-width: 100vw;
   overflow-x: hidden;
+}
+
+@font-face {
+  font-family: "Julius Sans One";
+  src: url("/fonts/JuliusSansOne-Regular.ttf");
 }
