--- a/src/app/components/cards/SpiritCard.module.css
+++ b/src/app/components/cards/SpiritCard.module.css
@@ -1,10 +1,14 @@
 .container {
-  width: 80%;
+  width: 450px;
   height: 150px;
   margin: 25px 0;
   padding: 25px 0;
   display: flex;
   transition: box-shadow 0.3s ease; /* Add transition property */
+
+  font-size: 0.8rem;
+  font-family: sans-serif;
+  text-align: center;
 }
 
 .container:hover {
