--- a/src/app/spirits/page.module.css
+++ b/src/app/spirits/page.module.css
@@ -7,7 +7,7 @@
 }
 
 .contentWrapper {
-  width: 80%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -26,10 +26,11 @@
 }
 
 .spiritWrapper {
-  width: 80%;
-  margin: 50px 0;
+  width: 100%;
+  margin: 10px 0;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
 }
